--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <img src="{{ url_for('static', filename='logo.svg') }}" alt="Logo" width="200">
 <head>
   <title>Source's Stream Tool</title>
   <style>
