--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <img src="{{ url_for('static', filename='logo.svg') }}" alt="Logo" width="200">
 <head>
+  <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}">
   <title>Source's Stream Tool</title>
   <style>
     body {
