--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
   <!-- Round and Best Of -->
   <div class="centered-row">
     <!--body>Round</body-->
-    <input type="text" id="round" placeholder="Round" value="{{ data.round }}">
+    <input type="text" id="round" placeholder="Round" value="{{ round }}">
     <input value="Best Of" width="90px" readonly></input>
-    <input type="number" id="bestof" min="1" max="9" step="2" value="{{ data.bestof }}">
+    <input type="number" id="bestof" min="1" max="9" step="2" value="{{ bestof }}">
   </div>
 
   <br>
@@ -101,16 +101,16 @@
   <!-- Player Names + Scores -->
   <div class="centered-row">
     <!--label>P1 Nametag</label-->
-    <input type="text" id="player1_name" placeholder="Player 1" value="{{ data.player1_name }}">
+    <input type="text" id="player1" placeholder="Player 1" value="{{ player1 }}">
     <!--label>P2 Nametag </label-->
-    <input type="text" id="player2_name" placeholder="Player 2" value="{{ data.player2_name }}">
+    <input type="text" id="player2" placeholder="Player 2" value="{{ player2 }}">
   </div>
 
   <div class="centered-row">
     <!--label>P1 Score</label-->
-    <input type="number" id="player1_score" value="{{ data.player1_score }}">
+    <input type="number" id="score1" value="{{ score1 }}">
     <!--label>P2 Score</label-->
-    <input type="number" id="player2_score" value="{{ data.player2_score }}">
+    <input type="number" id="score2" value="{{ score2 }}">
   </div>
 
   <!-- Swap Players Button -->
@@ -125,9 +125,9 @@
   <!-- Commentators -->
   <div class="centered-row">
     <!--label>Comms 1</label-->
-    <input type="text" id="commentator1" placeholder="Commentator 1" value="{{ data.commentator1 }}">
+    <input type="text" id="commentator1" placeholder="Commentator 1" value="{{ commentator1 }}">
     <!--label>Comms 2</label-->
-    <input type="text" id="commentator2" placeholder="Commentator 2"value="{{ data.commentator2 }}">
+    <input type="text" id="commentator2" placeholder="Commentator 2"value="{{ commentator2 }}">
   </div>
 
   <!-- Swap Commentators Button -->
@@ -158,26 +158,26 @@
     }
 
     function swapPlayers() {
-      const name1 = getField('player1_name');
-      const name2 = getField('player2_name');
-      const player1_score = getField('player1_score');
-      const player2_score = getField('player2_score');
-      setField('player1_name', name2);
-      setField('player2_name', name1);
-      setField('player1_score', player2_score);
-      setField('player2_score', player1_score);
+      const name1 = getField('player1');
+      const name2 = getField('player2');
+      const score1 = getField('score1');
+      const score2 = getField('score2');
+      setField('player1', name2);
+      setField('player2', name1);
+      setField('score1', score2);
+      setField('score2', score1);
     }
 
     function resetScores() {
-      setField('player1_score', 0);
-      setField('player2_score', 0);
+      setField('score1', 0);
+      setField('score2', 0);
     }
 
     function resetAll() {
-      setField('player1_name', "Player 1");
-      setField('player2_name', "Player 2");
-      setField('player1_score', 0);
-      setField('player2_score', 0);
+      setField('player1', "Player 1");
+      setField('player2', "Player 2");
+      setField('score1', 0);
+      setField('score2', 0);
       setField('commentator1', "Commentator 1");
       setField('commentator2', "Commentator 2");
       setField('round', "Winners Round 1");
@@ -193,23 +193,24 @@
 
     function saveData() {
       const data = {
-        player1_name: getField('player1_name'),
-        player2_name: getField('player2_name'),
-        player1_score: getField('player1_score'),
-        player2_score: getField('player2_score'),
+        player1: getField('player1'),
+        player2: getField('player2'),
+        score1: getField('score1'),
+        score2: getField('score2'),
         commentator1: getField('commentator1'),
         commentator2: getField('commentator2'),
         round: getField('round'),
         bestof: getField('bestof')
       };
 
-      fetch('/save', {
+      fetch('/', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
       })
-      .then(res => res.json())
-      //.then(data => alert(data.message))
+      .then(res => {
+        if (!res.ok) throw new Error("Failed to save");
+      })
       .catch(err => alert("Error saving data"));
     }
 
